--- a/src/main/java/dealership/ui/MakeAppointment.form
+++ b/src/main/java/dealership/ui/MakeAppointment.form
@@ -86,20 +86,12 @@
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="timeLabel" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="timeSelect" alignment="0" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="vehicleLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="monthLabel" min="-2" pref="63" max="-2" attributes="0"/>
-                                  <Component id="monthSelect" min="-2" pref="111" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="dayLabel" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <Component id="daySelect" min="-2" pref="62" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
+                      <Component id="vehicleLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="monthLabel" min="-2" pref="63" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
                       </Group>
+                      <Component id="dateSelect" alignment="1" max="32767" attributes="0"/>
                       <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="24" max="32767" attributes="0"/>
@@ -114,15 +106,9 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="monthLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="dayLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="monthLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="monthSelect" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="daySelect" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="dateSelect" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="timeLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -133,30 +119,14 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JComboBox" name="monthSelect">
+        <Component class="javax.swing.JComboBox" name="dateSelect">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="12">
-                <StringItem index="0" value="January"/>
-                <StringItem index="1" value="February"/>
-                <StringItem index="2" value="March"/>
-                <StringItem index="3" value="April"/>
-                <StringItem index="4" value="May"/>
-                <StringItem index="5" value="June"/>
-                <StringItem index="6" value="July"/>
-                <StringItem index="7" value="August"/>
-                <StringItem index="8" value="September"/>
-                <StringItem index="9" value="October"/>
-                <StringItem index="10" value="November"/>
-                <StringItem index="11" value="December"/>
-              </StringArray>
-            </Property>
           </Properties>
           <Events>
-            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="monthSelectItemStateChanged"/>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="dateSelectItemStateChanged"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -168,29 +138,7 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Month"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="daySelect">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JLabel" name="dayLabel">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
-            <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Day"/>
+            <Property name="text" type="java.lang.String" value="Date"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="timeLabel">
@@ -209,17 +157,17 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="11">
-                <StringItem index="0" value="8:00 A.M. - 9:00 A.M."/>
-                <StringItem index="1" value="9:00 A.M. - 10:00 A.M."/>
-                <StringItem index="2" value="10:00 A.M. - 11:00 A.M."/>
-                <StringItem index="3" value="11:00 A.M. - 12:00 P.M."/>
-                <StringItem index="4" value="12:00 P.M. - 1:00 P.M."/>
-                <StringItem index="5" value="1:00 P.M. - 2:00 P.M."/>
-                <StringItem index="6" value="2:00 P.M. - 3:00 P.M."/>
-                <StringItem index="7" value="3:00 P.M. - 4:00 P.M."/>
-                <StringItem index="8" value="4:00 P.M. - 5:00 P.M."/>
-                <StringItem index="9" value="5:00 P.M. - 6:00 P.M."/>
-                <StringItem index="10" value="6:00 P.M. - 7:00 P.M."/>
+                <StringItem index="0" value="08:00 AM - 09:00 AM"/>
+                <StringItem index="1" value="09:00 AM - 10:00 AM"/>
+                <StringItem index="2" value="10:00 AM - 11:00 AM"/>
+                <StringItem index="3" value="11:00 AM - 12:00 PM"/>
+                <StringItem index="4" value="12:00 PM - 01:00 PM"/>
+                <StringItem index="5" value="01:00 PM - 02:00 PM"/>
+                <StringItem index="6" value="02:00 PM - 03:00 PM"/>
+                <StringItem index="7" value="03:00 PM - 04:00 PM"/>
+                <StringItem index="8" value="04:00 PM - 05:00 PM"/>
+                <StringItem index="9" value="05:00 PM - 06:00 PM"/>
+                <StringItem index="10" value="06:00 PM - 07:00 PM"/>
               </StringArray>
             </Property>
           </Properties>
